--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="align-content-center justify-content-center col-12"><img src="img/Logo.jpg" class="img-fluid col-1 float-start"> <h3>Слышать - это красиво</h3></div>
+        <div class="align-content-center justify-content-center col-12"><img src="img/Logo.png" class="img-fluid col-1 float-start"> <h3>Слышать - это красиво</h3></div>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid d-">
                 <a class="navbar-brand" href="#">Навигатор</a>
@@ -24,6 +24,7 @@
                         <a class="nav-link" href="#Main">Главная</a>
                         <a class="nav-link" href="#Product">Продукция</a>
                         <a class="nav-link" href="#Qvest">Часто задоваемые вопросы</a>
+                        <a class="nav-link" href="#FuckingStupedForm">Заказать</a>
                     </div>
                 </div>
             </div>
@@ -32,16 +33,6 @@
             <video class="col-12" controls loop>
                 <source src="video.mp4"/>
             </video>
-            <div class="container ">
-                <img src="./img/NIKA-C.png" class="img-fluid float-end col-xl-4 col-md-5 col-sm-6 col-12" >
-                <p class="col-xl-8 col-md-6 col-lg-12 ">В мире неумолимо растет число слабослышащих и тотально неслышащих людей. Более 360 миллионов человек страдают глухотой или нарушением слуха. По данным ВОЗ нарушения слуха — одна из самых распространенных патологий здоровья во всем мире. Как следует из публикуемого сегодня Всемирной организацией здравоохранения (ВОЗ) первого Всемирного доклада по проблемам слуха, к 2050 г. почти 2,5 миллиарда человек во всем мире – т.е. каждый четвертый – будут страдать той или иной степенью потери слуха. Слуховые аппараты улучшают качество жизни 90% людей с проблемами слуха, но все ли хотят, чтобы окружающие знали их особенность? </p>
-                <div class="container"><p>Мы сами студенты и не понаслышке знаем, что наши обучающиеся не всегда слышат преподавателя, особенно, если педагог находится за спиной, и это большая проблема.  Именно поэтому мы разработали уникальное устройство - конвертер «НИКА – С» (приемник, объединяющий предусилитель сигнала и преобразователь речи в текст), чтобы облегчить жизнь людей с нарушением слуха.<br>
-                    Мы также постарались сделать и сами слуховые аппараты особенными, чтобы каждый мог наслаждаться полноценным звуком.<br>
-                    Позвольте Вам помочь услышать мир яснее и ярче!<br>
-                    Слышать – это красиво!
-                    </p>
-                </div>
-            </div>
             <p class="h3">Продукция</p>
 
             <div class="container" id="Product">
@@ -68,57 +59,16 @@
                                 </div>
                             </div>
                             <div class="modal-footer">
-                                <button data-bs-toggle="modal" data-bs-target="#FuckingStupedForm" class="btn btn-primary Openform">Заказать</button>
+                                <button onclick="GoToForm()" class="btn btn-primary opqw Openform">Заказать</button>
                             </div>
                         </div>
-                        <div class="modal-xl fade" id="FuckingStupedForm" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h1 class="modal-title fs-5"></h1>
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <div class="col-md-6 mb-3">
-                                            <label for="name" class="form-label">Ваши ФИО*</label>
-                                            <input type="text" class="form-control" id="name" required>
-                                        </div>
-                                        <div class="col-md-6 mb-3">
-                                            <label for="email" class="form-label">E-mail</label>
-                                            <input type="email" class="form-control" id="email" required>
-                                        </div>
-                                        <div class="mb-3">
-                                            <label for="product" class="form-label">Продукция</label>
-                                            <select class="form-select" id="products" required>
-                                                <option value="">Выбрать...</option>
-                                                <option value="product1">Конвектор НИКА-С</option>
-                                                <option value="product2">Кафы 1</option>
-                                                <option value="product3">Кафы 2</option>
-                                                <option value="product4">Кафы 3</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-check">
-                                            <input type="checkbox" class="form-check-input" id="delivery">
-                                            <label for="delivery" class="form-check-label">Доставка</label>
-                                            <input type="text" class="form-control" id="adress" required>
-                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="submit" class="btn btn-primary">КУПИТЬ</button>
-                                        <div class="small pt-2">
-                                            <input type="checkbox" class="form-check-input" id="Oke">
-                                            Нажимая кнопку "купить", я даю свое согласие на обработку моих персональных данных, в соответствии с Федеральным законом от 27.07.2006 года № 152-ФЗ "О персональных данных"
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+
                     </div>
                 </div>
                     <div class="card bob" style="width: 16rem;">
                         <img src="./img/Kafa2(.jpg" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Кафы</h5>
+                            <h5 class="card-title">Каффы</h5>
                             <p class="card-footer">900,00 р.</p>
                             <a data-bs-toggle="modal" data-bs-target="#ModalKafa2" class="btn btn-primary Openform">Подробнее</a>
                         </div>
@@ -137,7 +87,7 @@
                                         </div>
                                     </div>
                                     <div class="modal-footer">
-                                        <button data-bs-toggle="modal" data-bs-target="#FuckingStupedForm" class="btn btn-primary Openform">Заказать</button>
+                                        <button onclick="GoToForm()" class="btn btn-primary opqw Openform">Заказать</button>
                                     </div>
                                 </div>
                             </div>
@@ -146,7 +96,7 @@
                     <div class="card bob" style="width: 16rem;">
                         <img src="./img/Ka.jpg" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Кафы</h5>
+                            <h5 class="card-title">Каффы</h5>
                             <p class="card-footer">700,00 р.</p>
                             <a data-bs-toggle="modal" data-bs-target="#ModalKafa" class="btn btn-primary Openform">Подробнее</a>
                         </div>
@@ -164,7 +114,7 @@
                                             <div class="p">Описание<br><br>Вес: Да г</div></div>                                        </div>
                                     </div>
                                     <div class="modal-footer">
-                                        <button data-bs-toggle="modal" data-bs-target="#FuckingStupedForm" class="btn btn-primary Openform">Заказать</button>
+                                        <button onclick="GoToForm()" class="btn btn-primary Openform">Заказать</button>
                                     </div>
                                 </div>
                             </div>
@@ -173,7 +123,7 @@
                     <div class="card" style="width: 16rem; margin-left: 10px; margin-top: 10px">
                         <img src="./img/Kafa;3.jpg" class="card-img-top">
                         <div class="card-body">
-                            <h5 class="card-title">Кафы</h5>
+                            <h5 class="card-title">Каффы</h5>
                             <p class="card-footer">500,00 р.</p>
                             <a data-bs-toggle="modal" data-bs-target="#ModalKafa3" class="btn btn-primary">Подробнее</a>
                         </div>
@@ -191,17 +141,20 @@
                                             <div class="p">Описание<br><br>Вес: Да г</div></div>                                        </div>
                                     </div>
                                     <div class="modal-footer">
-                                        <button data-bs-toggle="modal" data-bs-target="#FuckingStupedForm" class="btn btn-primary Openform">Заказать</button>
+                                        <button onclick="GoToForm()" class="btn btn-primary Openform">Заказать</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
 
                     </div>
+        <video class="col-12" controls loop>
+            <source src="video2.mp4"/>
+        </video>
 
             </div><div class="containier col-12 bg-white"></div>
             <div class="container" id="Qvest">
-                <p class="h3">Часто задаваемые вопросы</p>
+                <p class="h3">Часто задоваемые вопросы</p>
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
@@ -246,6 +199,40 @@
                 </div>
             </div>
             <br>
+    <div class="container">
+        <form id="FuckingStupedForm">
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    <label for="name" class="form-label">Ваши ФИО*</label>
+                    <input type="text" class="form-control" id="name" required>
+                </div>
+                <div class="col-md-6 mb-3">
+                    <label for="email" class="form-label">E-mail</label>
+                    <input type="email" class="form-control" id="email" required>
+                </div>
+                <div class="mb-3">
+                    <label for="product" class="form-label">Продукция</label>
+                    <select class="form-select" id="products" required>
+                        <option value="">Выбрать...</option>
+                        <option value="product1">Конвектор НИКА-С</option>
+                        <option value="product2">Каффы 1</option>
+                        <option value="product3">Каффы 2</option>
+                        <option value="product4">Каффы 3</option>
+                    </select>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="delivery">
+                    <label for="delivery" class="form-check-label">Доставка</label>
+                    <input type="text" class="form-control" id="adress" required>
+                </div>
+                <button type="submit" onclick="buy()" class="btn btn-primary">КУПИТЬ</button>
+                <div class="small pt-2">
+                    <input type="checkbox" class="form-check-input" id="Oke">
+                    Нажимая кнопку "купить", я даю свое согласие на обработку моих персональных данных, в соответствии с Федеральным законом от 27.07.2006 года № 152-ФЗ "О персональных данных"
+                </div>
+            </div>
+        </form>
+    </div>
     <footer></footer>
 
         </div>
