Autism - is not problem

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="css/bootstrap-grid.min.css" rel="stylesheet">
     <link href="css/bootstrap-utilities.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
+    <link href="img/Logo.png" rel="icon">
 </head>
 <body>
     <div class="container">
@@ -58,9 +59,6 @@
                                     <div class="p">Идеальное устройство для ежедневного использования, состоящий из микрофона, вибромоторчика, батареи для заряда, и разьема для зарядки<br><br>Устройство обладает низким весом, обеспечивая комфортное ношение в течении всего дня. Также продуманная конструкция, позволяет не выделяться из общей массы людей.  <br><br>Вес: 500г</div>
                                 </div>
                             </div>
-                            <div class="modal-footer">
-                                <button onclick="GoToForm()" class="btn btn-primary opqw Openform">Заказать</button>
-                            </div>
                         </div>
 
                     </div>
@@ -82,12 +80,9 @@
                                     <div class="modal-body">
                                         <img src="./img/Kafa2(.jpg" class="img-fluid float-start col-4">
                                         <div class="m-t">
-                                            <div class="h3">Кафа</div>
+                                            <div class="h3">Каффа</div>
                                             <div class="p">Описание<br><br>Вес: Да г</div>
                                         </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button onclick="GoToForm()" class="btn btn-primary opqw Openform">Заказать</button>
                                     </div>
                                 </div>
                             </div>
@@ -110,11 +105,8 @@
                                     <div class="modal-body">
                                         <img src="./img/Ka.jpg" class="img-fluid float-start col-4">
                                         <div class="m-t">
-                                            <div class="h3">Кафа</div>
+                                            <div class="h3">Каффа</div>
                                             <div class="p">Описание<br><br>Вес: Да г</div></div>                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button onclick="GoToForm()" class="btn btn-primary Openform">Заказать</button>
                                     </div>
                                 </div>
                             </div>
@@ -139,9 +131,6 @@
                                         <div class="m-t">
                                             <div class="h3">Конвертор НИКА-С</div>
                                             <div class="p">Описание<br><br>Вес: Да г</div></div>                                        </div>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button onclick="GoToForm()" class="btn btn-primary Openform">Заказать</button>
                                     </div>
                                 </div>
                             </div>
@@ -201,6 +190,7 @@
             <br>
     <div class="container">
         <form id="FuckingStupedForm">
+            <p class="h3">Форма заказа</p><br>
             <div class="row">
                 <div class="col-md-6 mb-3">
                     <label for="name" class="form-label">Ваши ФИО*</label>
@@ -233,7 +223,7 @@
             </div>
         </form>
     </div>
-    <footer></footer>
+    <footer><div class="h6 justify-content-center">+7 (982) 923 63-12</div></footer>
 
         </div>
     </div>
