--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
             </div><div class="containier col-12 bg-white"></div>
             <div class="container" id="Qvest">
-                <p class="h3">Часто задоваемые вопросы</p>
+                <p class="h3">Часто задаваемые вопросы</p>
                 <div class="accordion" id="accordionExample">
                     <div class="accordion-item">
                         <h2 class="accordion-header">
