Polniy NIKA-Copium and Kaffedron

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="navbar-nav">
                         <a class="nav-link" href="#Main">Главная</a>
                         <a class="nav-link" href="#Product">Продукция</a>
-                        <a class="nav-link" href="#Qvest">Часто задоваемые вопросы</a>
+                        <a class="nav-link" href="#Qvest">Часто задаваемые вопросы</a>
                         <a class="nav-link" href="#FuckingStupedForm">Заказать</a>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                                         <img src="./img/Kafa2(.jpg" class="img-fluid float-start col-4">
                                         <div class="m-t">
                                             <div class="h3">Каффа</div>
-                                            <div class="p">Описание<br><br>Вес: Да г</div>
+                                            <div class="p">Кафф это стильное украшения для вашего слухового аппарата, кроме того кафф решает проблему эстетики,который не мешает основному функционалу устройства.<br><br>Вес: 5 г</div>
                                         </div>
                                     </div>
                                 </div>
@@ -106,7 +106,7 @@
                                         <img src="./img/Ka.jpg" class="img-fluid float-start col-4">
                                         <div class="m-t">
                                             <div class="h3">Каффа</div>
-                                            <div class="p">Описание<br><br>Вес: Да г</div></div>                                        </div>
+                                            <div class="p">Кафф это стильное украшения для вашего слухового аппарата, кроме того кафф решает проблему эстетики,который не мешает основному функционалу устройства.<br><br>Вес: 4.5 г</div></div>                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -129,8 +129,8 @@
                                     <div class="modal-body">
                                         <img src="./img/Kafa;3.jpg" class="img-fluid float-start col-4">
                                         <div class="m-t">
-                                            <div class="h3">Конвертор НИКА-С</div>
-                                            <div class="p">Описание<br><br>Вес: Да г</div></div>                                        </div>
+                                            <div class="h3">Каффа</div>
+                                            <div class="p">Кафф это стильное украшения для вашего слухового аппарата, кроме того кафф решает проблему эстетики,который не мешает основному функционалу устройства.<br><br>Вес: 4.45 г</div></div>                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -153,9 +153,8 @@
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                                На странице интернет-магазина выберите понравившийся товар. Чтобы узнать о нем подробнее, кликните на одноименную кнопку — вы попадете на страницу товара с полным описанием, мы старались сделать его полезным и информативным!
-                                <br>
-                                Нажав "Купить” , вы попадете на страницу заполнения данных для оформления заказа. Заполните необходимую информацию, затем сайт предложит варианты доставки и оплаты. В поле "комментарий к заказу" можно написать нам свои пожелания по оформлению и доставке, а мы постараемся все исполнить!
+                                На странице интернет-магазина выберите понравившийся товар. Чтобы узнать о нем подробнее, кликните на одноименную кнопку — вы попадете на страницу товара с полным описанием, мы старались сделать его полезным и информативным!<br>
+                                Внизу находиться форма для покупки наших товаров, вы заполняете данные для оформления заказа. Заполните необходимую информацию, затем сайт предложит варианты доставки и оплаты.в самом нищу вы можете купить выбранной вами товар,а мы постараемся все исполнить!
                             </div>
                         </div>
                     </div>
@@ -223,7 +222,7 @@
             </div>
         </form>
     </div>
-    <footer><div class="h6 justify-content-center">+7 (982) 923 63-12</div></footer>
+    <footer><div class="container h6 justify-content-center">+7 (982) 943 83-03</div></footer>
 
         </div>
     </div>
